[package]
name = "gorp_coin"
version = "0.1.0"
authors = ["Jordan Grace <jordan.t.grace@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.9"
